--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -26,10 +26,10 @@ jobs:
             --workdir /repo \
             --env LLM_API_KEY=${{ secrets.LLM_API_KEY }} \
             --env GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} \
-            --env GITHUB_PR_NUMBER=${{ github.event.pull_request.number }} \
             --env GITHUB_REPOSITORY=${{ github.repository }} \
-           \
+            --env GITHUB_PR_NUMBER=${{ github.event.pull_request.number }} \
+            --env GITHUB_BASE_REF=${{ github.event.pull_request.base.ref }} \
+            --env GITHUB_HEAD_REF=${{ github.event.pull_request.head.ref }} \
+            --env BITBUCKET_COMMIT=${{ github.event.pull_request.head.sha }} \
             $IMAGE_NAME \
-            --repo-path "." \
-            --base-ref "${{ github.event.pull_request.base.sha }}" \
-            --head-ref "${{ github.event.pull_request.head.sha }}"
+            review --repo-path "." --base-ref "${{ github.event.pull_request.base.ref }}" --head-ref "${{ github.event.pull_request.head.sha }}"
