--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -26,6 +26,7 @@ jobs:
             --workdir /repo \
             --env LLM_API_KEY=${{ secrets.LLM_API_KEY }} \
             --env GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} \
+            --env AGENT_ACCESS_TOKEN=${{ secrets.AGENT_ACCESS_TOKEN }} \
             --env GITHUB_REPOSITORY=${{ github.repository }} \
             --env GITHUB_PR_NUMBER=${{ github.event.pull_request.number }} \
             --env GITHUB_BASE_REF=${{ github.event.pull_request.base.ref }} \
